[package]
name = "ggrs_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.13"
bytemuck = {version="1.7.3", features= ["derive"]}
instant = {version="0.1.12"}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
async-executor = "1.4.1"
ggrs = { git = "https://github.com/gschup/ggrs"}
matchbox_socket = { path = "../matchbox/matchbox_socket", features = ["ggrs-socket"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ggrs = { git = "https://github.com/gschup/ggrs", features=["sync-send", "wasm-bindgen"]}
instant = {version="0.1.12", features= ["wasm-bindgen"]}
