[package]
name = "ggrs_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.11"
bytemuck = {version="1.7.3", features= ["derive"]}
instant = {version="0.1.12"}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
async-executor = "1.4.1"
ggrs = { version = "0.10.2"}
matchbox_socket = {version = "0.10.0", features = ["ggrs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ggrs = { version = "0.10.2", features=["wasm-bindgen"]}
instant = {version="0.1.12", features= ["wasm-bindgen"]}
